code to fix fixed background on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -7,10 +7,6 @@
 body {
     font-family: "Cairo", sans-serif;
     
- /*   background-color: #e45454;
-    background: url("../assets/images/background95663.jpg") no-repeat center center fixed;
-    background-size: cover;
-*/    
     min-height: 100vh;
 
     display: -webkit-box;
@@ -22,6 +18,7 @@ body {
     flex-direction: column;
 }
 
+/* Code adapted from https://stackoverflow.com/a/43058483 to fix scaling issues on iOS devices */
 body:after{
       content:"";
       position:fixed; /* stretch a fixed position to the whole screen */
@@ -36,6 +33,8 @@ body:after{
       -o-background-size: cover;
       background-size: cover;
 }
+/* End of code snippet */
+
 
 /* Color Schemes - reusable colour schemes for pages and containers*/
 
